--- a/src/App.less
+++ b/src/App.less
@@ -1,14 +1,23 @@
 @import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700");
 
+@import './Navbar.less';
+@import './Portfolio.less';
+@import './PersonalInfo.less';
+
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 *, *::before, *::after {
-    box-sizing: inherit;
-    padding: 0;
-    margin: 0;
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+:link {
+  color: black;
+  text-decoration: none;
 }
 
 #app {
-    
+
 }
