--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -1,8 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700");
-
-@import './Navbar.less';
-@import './Portfolio.less';
-@import './PersonalInfo.less';
+// @import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700");
 
 html {
   box-sizing: border-box;
