--- a/src/components/PersonalInfo/PersonalInfo.less
+++ b/src/components/PersonalInfo/PersonalInfo.less
@@ -6,12 +6,18 @@
       z-index: 1;
       font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
       font-size: 5rem;
-      left: 25%;
-      top: 25%;
       font-weight: bold;
       color: gainsboro;
+      &.name {
+        left: 25%;
+        top: 25%;
+      }
+      &.job {
+        left: 25%;
+        top: 35%;
+      }
     }
-    .head-shot {
+    .avatar {
       width: 100vw;
       // mix-blend-mode: darken;
       display: flex;
