--- a/src/components/Carousel/carousel.less
+++ b/src/components/Carousel/carousel.less
@@ -2,45 +2,72 @@
 @indicate-counter: 3;
 
 .carousel {
-  width: 100vw;
+  width: 100%;
   height: 100%;
-  display: flex;
+  display: inline-flex;
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
   padding: 0 1rem; 
+  position: relative;
   .responsive-setting({
     padding: 0 1rem;
   }, {
     padding: 0 10%;
   }, {
-    padding: 0 20%;
+    padding: 0 15%;
   });
 
+  & > * {
+    flex-shrink: 0;
+  }
+
+  &:hover {
+    .left-arrow, .right-arrow {
+      visibility: visible;
+    }
+  }
+
+  .arrow() {
+    visibility: hidden;
+    position: absolute;
+    border: 0.5rem solid grey;
+    transform: rotate(-45deg);
+    border-color: rgb(187, 182, 182);
+    width: 3rem;
+    height: 3rem;
+    min-width: 3rem;
+    min-height: 3rem;
+    z-index: 999;
+  }
   .left-arrow {
-    border: 4px solid grey;
+    .arrow();
     border-right: none;
     border-bottom: none;
-    transform: rotate(-45deg);
-    border-color: rgb(187, 182, 182);
-    width: 1rem;
-    height: 1rem;
+    left: 5%;
   }
   .right-arrow {
-    border: 4px solid grey;
+    .arrow();
     border-left: none;
     border-top: none;
-    transform: rotate(-45deg);
-    border-color: rgb(187, 182, 182);
-    width: 1rem;
-    height: 1rem;
+    right: 5%;
   }
-  .content {
-    display: flex;
-    margin: 1rem;
-    align-content: space-between;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+
+  .slider {
+    position: relative;
+    width: 100%;
+    .slider-mask {
+      overflow-x: hidden;
+      .items {
+        white-space: nowrap;
+        .item {
+          display: inline-flex;
+          justify-content: center;
+          padding: 10px;
+          width: 33.3%;
+          height: 100%;
+        }
+      }
+    }
   }
 }
