--- a/src/components/Carousel/carousel.less
+++ b/src/components/Carousel/carousel.less
@@ -7,50 +7,55 @@
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
-  cursor: pointer;
-  padding: 0 1rem; 
   position: relative;
-  .responsive-setting({
-    padding: 0 1rem;
-  }, {
-    padding: 0 10%;
-  }, {
-    padding: 0 15%;
-  });
 
   & > * {
     flex-shrink: 0;
   }
 
   &:hover {
-    .left-arrow, .right-arrow {
-      visibility: visible;
+    .arrow-mask {
+      .left-arrow, .right-arrow {
+        visibility: visible;
+      }
     }
   }
-
-  .arrow() {
-    visibility: hidden;
+  
+  .arrow-mask {
+    width: 6rem;
+    height: 100%;
     position: absolute;
-    border: 0.5rem solid grey;
-    transform: rotate(-45deg);
-    border-color: rgb(187, 182, 182);
-    width: 3rem;
-    height: 3rem;
-    min-width: 3rem;
-    min-height: 3rem;
-    z-index: 999;
-  }
-  .left-arrow {
-    .arrow();
-    border-right: none;
-    border-bottom: none;
-    left: 5%;
-  }
-  .right-arrow {
-    .arrow();
-    border-left: none;
-    border-top: none;
-    right: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9;
+    &:hover {
+      background: rgba(20, 20, 20, .7);
+      cursor: pointer;
+    }
+    .arrow() {
+      visibility: hidden;
+      border: solid #aaa;
+      border-width: 0 0.5rem 0.5rem 0;
+      padding: 0.5rem;
+      display: inline-block;
+      z-index: 999;
+      position: absolute;
+    }
+    .left-arrow {
+      .arrow();
+      transform: rotate(135deg);
+    }
+    .right-arrow {
+      .arrow();
+      transform: rotate(-45deg);
+    }
+    &.left {
+      left: 0%;
+    }
+    &.right {
+      right: 0%;
+    }
   }
 
   .slider {
@@ -64,8 +69,15 @@
           display: inline-flex;
           justify-content: center;
           padding: 10px;
-          width: 33.3%;
+          width: 33.33%;
           height: 100%;
+          max-height: 350px;
+          @media screen and (max-width: 1280px) {
+            width: 50%;
+          }
+          @media screen and (max-width: 640px) {
+            width: 100%;
+          }
         }
       }
     }
