--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -9,8 +9,8 @@ html {
   margin: 0;
 }
 
-:link {
-  color: black;
+a, a:hover, a:focus, a:active {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -26,5 +26,176 @@ body {
     margin: 5%;
   }, {
     margin: 15%;
-  })
+  });
+  
+  .icon-group {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    z-index: 1;
+    width: 55px;
+    height: 200px;
+    li {
+      &:hover {
+        cursor: pointer;
+      }
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 75px;
+        height: 55px;
+        padding-left: 20px;
+        margin-left: -20px;
+        transition: margin-left 0.2s linear;
+        &:hover {
+          margin-left: 0;
+        }
+        &.linkedin {
+          background-color: #0077ba;
+        }
+        &.github {
+          background-color: #4e545a;
+        }
+        &.medium {
+          background-color: black;
+        }
+      }
+    }
+  }
+
+  .sea-world-wrapper {
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(180deg, #04fafd 5%, #119dff 50%, #030423);
+    position: fixed;
+    z-index: -999;
+    div {
+      height: 60px;
+      width: 60px;
+      border: 2px solid rgba(255, 255, 255, 0.7);
+      border-radius: 50%;
+      position: absolute;
+      top: 10%;
+      left: 10%;
+      animation: bubbling 4s linear infinite;
+      .dot {
+        height: 10px;
+        width: 10px;
+        border-radius: 50%;
+        background: rgba(255, 255, 255, 0.5);
+        position: absolute;
+        top: 20%;
+        right: 20%;
+      }
+      &:nth-child(1) {
+        top: 20%;
+        left: 20%;
+        animation: bubbling 4s linear infinite;
+      }
+      &:nth-child(2) {
+        top: 60%;
+        left: 80%;
+        animation: bubbling 8s linear infinite;
+      }
+      &:nth-child(3) {
+        top: 50%;
+        left: 70%;
+        animation: bubbling 10s linear infinite;
+      }
+      &:nth-child(4) {
+        top: 80%;
+        left: 60%;
+        animation: bubbling 6s linear infinite;
+      }
+      &:nth-child(5) {
+        top: 20%;
+        left: 80%;
+        animation: bubbling 10s linear infinite;
+      }
+      &:nth-child(6) {
+        top: 90%;
+        left: 90%;
+        animation: bubbling 6s linear infinite;
+      }
+      &:nth-child(7) {
+        top: 80%;
+        left: 20%;
+        animation: bubbling 4s linear infinite;
+      }
+      &:nth-child(8) {
+        top: 60%;
+        left: 60%;
+        animation: bubbling 5s linear infinite;
+      }
+      &:nth-child(9) {
+        top: 60%;
+        left: 90%;
+        animation: bubbling 7s linear infinite;
+      }
+      &:nth-child(10) {
+        top: 10%;
+        left: 80%;
+        animation: bubbling 9s linear infinite;
+      }
+      &:nth-child(11) {
+        top: 15%;
+        left: 45%;
+        animation: bubbling 3s linear infinite;
+      }
+      &:nth-child(12) {
+        top: 10%;
+        left: 10%;
+        animation: bubbling 4s linear infinite;
+      }
+      &:nth-child(13) {
+        top: 90%;
+        left: 40%;
+        animation: bubbling 8s linear infinite;
+      }
+      &:nth-child(14) {
+        top: 90%;
+        left: 10%;
+        animation: bubbling 10s linear infinite;
+      }
+      &:nth-child(15) {
+        top: 30%;
+        left: 40%;
+        animation: bubbling 6s linear infinite;
+      }
+      &:nth-child(16) {
+        top: 60%;
+        left: 100%;
+        animation: bubbling 4s linear infinite;
+      }
+      &:nth-child(17) {
+        top: 20%;
+        left: 40%;
+        animation: bubbling 8s linear infinite;
+      }
+      &:nth-child(18) {
+        top: 40%;
+        left: 45%;
+        animation: bubbling 5s linear infinite;
+      }
+      &:nth-child(19) {
+        top: 80%;
+        left: 10%;
+        animation: bubbling 7s linear infinite;
+      }
+    }
+  }
+
+  @keyframes bubbling {
+    0% {
+      transform: scale(0) translateY(0) rotate(70deg);
+    }
+    100% {
+      transform: scale(1.3) translateY(-100px) rotate(360deg);
+    }
+  }
+  
 }
