--- a/src/components/Carousel/carousel.less
+++ b/src/components/Carousel/carousel.less
@@ -69,17 +69,30 @@
           display: inline-flex;
           justify-content: center;
           padding: 10px;
-          width: 33.33%;
+          width: 100%;
           height: 100%;
           max-height: 350px;
-          @media screen and (max-width: 1280px) {
-            width: 50%;
-          }
-          @media screen and (max-width: 640px) {
-            width: 100%;
-          }
+          padding: 0 20%;
         }
       }
+    }
+  }
+}
+
+.indicator-group {
+  margin-top: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  .indicator {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+    &.selected {
+      background: linear-gradient(45deg, #04fafd, #fff);;
     }
   }
 }
