--- a/src/components/Carousel/carousel.less
+++ b/src/components/Carousel/carousel.less
@@ -62,17 +62,65 @@
     position: relative;
     width: 100%;
     .slider-mask {
-      overflow-x: hidden;
+      overflow: hidden;
       .items {
+        display: flex;
         white-space: nowrap;
-        .item {
+        gap: 10px;
+        .card-item {
           display: inline-flex;
+          flex-shrink: 0;
           justify-content: center;
           padding: 10px;
-          width: 100%;
-          height: 100%;
+          height: 365px;
           max-height: 350px;
-          padding: 0 20%;
+          position: relative;
+          // width: 465px;
+          // margin-right: 10px;
+          .responsive-setting({
+            flex-basis: 100%;
+          }, {
+            flex-basis: 50%;
+          }, {
+            flex-basis: 30%;
+          });
+          a {
+            position: absolute;
+            display: block;
+            height: 100%;
+            width: 100%;
+            z-index: 2;
+          }
+          .card-item__content {
+            width: 100%;
+            cursor: pointer;
+            &::before {
+              content: '';
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              display: block;
+              background: linear-gradient(180deg,rgba(2,0,20,.375) 0%,rgba(2,0,20,.75) 100%);
+              border-radius: 10px;
+              opacity: 0.9;
+            }
+            .card-item__footer {
+              width: 100%;
+              position: absolute;
+              top: 80%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              text-align: center;
+              vertical-align: middle;
+              color: white;
+              font-family: 'Montserrat';
+            }
+          }
+        }
+        &.drag-effect {
+          transition: transform 0.75s ease 0s,
         }
       }
     }
@@ -80,19 +128,36 @@
 }
 
 .indicator-group {
-  margin-top: 1rem;
+  margin-top: 2rem;
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 1rem;
   .indicator {
-    width: 1rem;
-    height: 1rem;
+    width: 0.75rem;
+    height: 0.75rem;
     border-radius: 50%;
-    border: 2px solid rgba(255, 255, 255, 0.2);
+    border: 2px solid #119dff;
     cursor: pointer;
     &.selected {
-      background: linear-gradient(45deg, #04fafd, #fff);;
+      background: #119dff;
     }
+  }
+  .arrow() {
+    border: solid #119dff;
+    border-width: 0 0.5rem 0.5rem 0;
+    padding: 0.5rem;
+    display: inline-block;
+    z-index: 999;
+    cursor: pointer;
+  }
+  .left {
+    .arrow();
+    transform: rotate(135deg);
+  }
+  .right {
+    .arrow();
+    transform: rotate(-45deg);
   }
 }
