--- a/src/components/Contact/Contact.less
+++ b/src/components/Contact/Contact.less
@@ -1,4 +1,4 @@
-#portfolio {
+.contact {
   margin-top: 20%;
   
   h1 {
@@ -8,7 +8,7 @@
     position: relative;
     &::after {
       content: '';
-      background-image: url(../../assets/svg/portfolio.svg);
+      background-image: url(../../assets/svg/contact.svg);
       background-repeat: no-repeat;
       background-position: center;
       background-size: 2rem;
