--- a/src/components/PersonalInfo/PersonalInfo.less
+++ b/src/components/PersonalInfo/PersonalInfo.less
@@ -2,6 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  margin: 10% 0;
   .avatar {
     display: flex;
     width: 100%;
@@ -18,12 +20,12 @@
     word-spacing: 2px;
     letter-spacing: 2px;
     padding: 0.5rem;
-    border-radius: 10px;
-    background: linear-gradient(#fff, rgb(23, 134, 199));
-    box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 10px;
+    // border-radius: 10px;
+    // background: linear-gradient(#fff, rgb(23, 134, 199));
+    // box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 10px;
     max-width: 640px;
     width: 100%;
-    margin: 5% 0;
+    // margin: 5% 0;
     h1 {
       inset: 0;
     }
@@ -33,7 +35,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10% 0;
+    // margin: 10% 0;
     svg {
       width: 100%;
       max-width: 640px;
