--- a/src/components/Skill/Skill.less
+++ b/src/components/Skill/Skill.less
@@ -31,6 +31,27 @@
       height: 100%;
       margin-left: 1rem;
       position: absolute;
+      
+    }
+    &.hide {
+      &::after {
+        animation: none;
+      }
+    }
+    &.show {
+      &::after {
+        animation: title 1s ease-out;
+      }
+    }
+    @keyframes title {
+      from {
+        transform: translate(100%, 0);
+        opacity: 0;
+      }
+      to {
+        transform: translate(0, 0);
+        opacity: 1;
+      }
     }
   }
   .list {
@@ -95,6 +116,7 @@
         }
         @keyframes fadeIn {
           0% {
+            opacity: 0;
           }
           100% {
             opacity: 1;
