--- a/src/components/Contact/Contact.less
+++ b/src/components/Contact/Contact.less
@@ -38,4 +38,19 @@
       }
     }
   }
+
+  .form-control {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 50vh;
+    max-width: 640px;
+    margin: 0 auto;
+    align-content: space-around;
+    & > * {
+      flex-basis: 100%;
+    }
+  }
 }
