--- a/src/components/PersonalInfo/PersonalInfo.less
+++ b/src/components/PersonalInfo/PersonalInfo.less
@@ -1,3 +1,4 @@
+@import '../generalAttribute.less';
 @animation-duration: 8s;
 
 .personal-info {
@@ -26,9 +27,16 @@
     width: 100%;
     h1 {
       inset: 0;
+      .responsive-setting({
+        font-size: 1rem;
+      }, {
+        font-size: 1rem;
+      }, {
+        font-size: inherit;
+      });
     }
   }
-  .image-container {
+  .svg-container {
     width: 100%;
     display: flex;
     justify-content: center;
