--- a/src/components/Carousel/carousel.less
+++ b/src/components/Carousel/carousel.less
@@ -28,7 +28,7 @@
       overflow: hidden;
       .items {
         display: flex;
-        white-space: nowrap;
+        // white-space: nowrap;
         gap: 10px;
         .card-item {
           display: inline-flex;
@@ -56,7 +56,9 @@
           }
           .card-item__content {
             width: 100%;
+            height: auto;
             cursor: pointer;
+            z-index: 9;
             &::before {
               content: '';
               position: absolute;
@@ -69,6 +71,19 @@
               border-radius: 10px;
               opacity: 0.9;
             }
+            &:hover {
+              &::before {
+                background: linear-gradient(180deg,rgba(2,0,20,.75) 0%,rgba(0, 0, 0, 0.95) 100%);
+              }
+              .card-item__footer {
+                // transition: all 0.5s ease;
+                top: 70%;
+                p {
+                  display: block;
+                  opacity: 1;
+                }
+              }
+            }
             .card-item__footer {
               width: 100%;
               position: absolute;
@@ -79,6 +94,12 @@
               vertical-align: middle;
               color: white;
               font-family: 'Montserrat';
+              transition: all 0.5s ease;
+              p {
+                padding: 0 15%;
+                opacity: 0;
+                display: none;
+              }
             }
           }
         }
