Complement version one

--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -27,7 +27,13 @@ body {
   }, {
     padding: 8%;
   });
-  
+
+  section {
+    margin: 0 auto;
+    margin-top: 20%;
+    max-width: 1920px;
+  }
+
   .icon-group {
     position: fixed;
     top: 50%;
