--- a/src/components/Skill/Skill.less
+++ b/src/components/Skill/Skill.less
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  font-family: 'Montserrat';
+  font-family: 'Open Sans', sans-serif;
   gap: 1rem;
   .responsive-setting({
     padding: 0;
@@ -23,7 +23,7 @@
     position: relative;
     &::after {
       content: '';
-      background-image: url(../../assets/svg/skill.svg);
+      // background-image: url(../../assets/svg/skill.svg);
       background-repeat: no-repeat;
       background-size: 2rem;
       background-position: center;
