--- a/src/components/Carousel/carousel.less
+++ b/src/components/Carousel/carousel.less
@@ -8,6 +8,9 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
+  max-width: 1920px;
+  left: 50%;
+  transform: translateX(-50%);
 
   & > * {
     flex-shrink: 0;
@@ -28,7 +31,6 @@
       overflow: hidden;
       .items {
         display: flex;
-        // white-space: nowrap;
         gap: 10px;
         .card-item {
           display: inline-flex;
@@ -38,8 +40,6 @@
           height: 365px;
           max-height: 350px;
           position: relative;
-          // width: 465px;
-          // margin-right: 10px;
           .responsive-setting({
             flex-basis: 100%;
           }, {
@@ -47,18 +47,10 @@
           }, {
             flex-basis: 30%;
           });
-          a {
-            position: absolute;
-            display: block;
-            height: 100%;
-            width: 100%;
-            z-index: 2;
-          }
           .card-item__content {
             width: 100%;
             height: auto;
             cursor: pointer;
-            z-index: 9;
             &::before {
               content: '';
               position: absolute;
@@ -76,7 +68,6 @@
                 background: linear-gradient(180deg,rgba(2,0,20,.75) 0%,rgba(0, 0, 0, 0.95) 100%);
               }
               .card-item__footer {
-                // transition: all 0.5s ease;
                 top: 70%;
                 p {
                   display: block;
@@ -99,6 +90,7 @@
                 padding: 0 15%;
                 opacity: 0;
                 display: none;
+                font-family: 'Roboto', sans-serif;
               }
             }
           }
