--- a/src/components/Contact/Contact.less
+++ b/src/components/Contact/Contact.less
@@ -1,13 +1,11 @@
 .contact {
-  margin-top: 20%;
-  font-family: 'Montserrat';
+  font-family: 'Open Sans', sans-serif;
   h1 {
     text-align: center;
     margin-bottom: 2rem;
     position: relative;
     &::after {
       content: '';
-      background-image: url(../../assets/svg/contact.svg);
       background-repeat: no-repeat;
       background-position: center;
       background-size: 2rem;
@@ -44,16 +42,17 @@
     align-items: center;
     align-content: space-around;
     flex-direction: column;
-    max-width: 640px;
     width: 100%;
     height: 50vh;
+    max-width: 30rem;
+    min-height: 20rem;
+    max-height: 40rem;
     margin: 0 auto;
     input {
       width: 100%;
       height: 60px;
       cursor: pointer;
       &[type="submit"] {
-        font-family: 'Montserrat';
         background: linear-gradient(90deg, #04fafd 5%, #119dff 100%);
         border-radius: 4px;
         border: 1px solid black;
@@ -113,7 +112,6 @@
       position: relative;
       textarea {
         width: 100%;
-        // font-family: inherit;
         padding-top: 20px;
         resize: none;
         border: 1px solid black;
@@ -121,10 +119,6 @@
         &:focus, &:not(:placeholder-shown) {
           outline-width: 0;
           & + label {
-            // border: none;
-            // &::after {
-            //   transform: translateX(0%);
-            // }
             .content-name {
               transform: translateY(-80%);
               color: #0077ba;
@@ -149,16 +143,6 @@
           z-index: 999;
           padding: 0 5px;
         }
-        // &::after {
-        //   content: "";
-        //   position: absolute;
-        //   left: 0;
-        //   bottom: 0;
-        //   width: 100%;
-        //   height: 100%;
-        //   border-bottom: 3px solid #0077ba;
-        //   transform: translateX(-100%);
-        // }
       }
     }
   }
