--- a/src/components/Portfolio/Portfolio.less
+++ b/src/components/Portfolio/Portfolio.less
@@ -1,14 +1,12 @@
 #portfolio {
-  margin-top: 20%;
-  
   h1 {
-    font-family: 'Montserrat';
+    font-family: 'Open Sans', sans-serif;
     text-align: center;
     margin-bottom: 2rem;
     position: relative;
     &::after {
       content: '';
-      background-image: url(../../assets/svg/portfolio.svg);
+      // background-image: url(../../assets/svg/portfolio.svg);
       background-repeat: no-repeat;
       background-position: center;
       background-size: 2rem;
